@@ -1,7 +1,24 @@
-# gc-monitoring
+# gc-tuning
 
-
+## 1. compile
 ```shell
 javac Main.java
+```
+
+## 2. gc monitoring
+```shell
 java -verbose:gc Main
 ```
+
+## 3. select GC
+```shell
+java -XX:+UseSerialGC Main
+java -XX:+UseG1GC Main
+java -XX:+UseZGC Main
+```
+
+## 4. heap size
+```shell
+java 
+```
+
